FEAT: customer & gambar-alite upgrade

--- a/skin/admin/css/custom.css
+++ b/skin/admin/css/custom.css
@@ -251,6 +251,25 @@ div::-webkit-scrollbar-thumb:hover {
 }
 
 
+.kartu-partner{
+    width: 250px;
+    height: 100px;
+    padding: 16px;
+    transition: background-color 0.3s ease;
+    border-radius: 24px;
+    background-color: #fff;
+    display: flex!important;
+    align-items: center;
+    justify-content: center;
+}
+
+.kartu-partner img{
+    max-width: 100%;
+    max-height: 100%;
+    text-align: center !important;
+}
+
+
 
 /* set button(top and bottom of the scrollbar) */
 /* .scrollbar::-webkit-scrollbar-button {display:none} */
