--- a/skin/admin/css/custom.css
+++ b/skin/admin/css/custom.css
@@ -324,6 +324,10 @@ div::-webkit-scrollbar-thumb:hover {
 /* set button(top and bottom of the scrollbar) */
 /* .scrollbar::-webkit-scrollbar-button {display:none} */
 
+:not(.main-content) .navbar .dropdown .dropdown-menu {
+    top: 0rem !important;
+}
+
 
 @media (prefers-color-scheme:light){
     .bg-primary{
